chore: docker file refactorings and openjdk/graal version bump